--- a/ReadinessWeb/wwwroot/css/picturiffic.css
+++ b/ReadinessWeb/wwwroot/css/picturiffic.css
@@ -269,6 +269,27 @@ a:focus {
     padding-top: 100px;
 }
 
+div.fileinputs {
+	position: relative;
+}
+
+div.photofile {
+	position: absolute;
+	top: 0px;
+	left: 0px;
+	z-index: 1;
+}
+
+input.file {
+	position: relative;
+	text-align: right;
+	-moz-opacity:0 ;
+	filter:alpha(opacity: 0);
+	opacity: 0;
+	z-index: 2;
+}
+
+
 .download-section {
     width: 100%;
     padding: 50px 0;
